Versão 1.1 (Acentos)