@@ -25,6 +25,18 @@ shadowJar {
     mergeServiceFiles()
 }
 
+run {
+    jvmArgs = [
+            "--add-modules=javafx.controls,javafx.fxml,javafx.graphics",
+            "--add-reads=javafx.base=ALL-UNNAMED",
+            "--add-reads=javafx.graphics=ALL-UNNAMED",
+            "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED",
+            "--add-exports=javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED",
+            "--add-exports=javafx.base/com.sun.javafx.binding=ALL-UNNAMED",
+            "--add-exports=javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED",
+            "--add-exports=javafx.base/com.sun.javafx.event=ALL-UNNAMED"
+    ]
+}
 
 javafx {
     version = "11.0.2"
